# enhancing-transformers

./: .editorconfig  .gitignore  LICENSE.md  environment.yaml  pyproject.toml  requirements.txt  setup.cfg
assets/class/: lsun.txt
configs/: imagenet_gpt_vitvq_base.yaml  imagenet_vitvq_base.yaml  imagenet_vitvq_large.yaml  imagenet_vitvq_small.yaml  ine_vitvq_lowres.yaml
src/enhancing/: __init__.py  __main__.py  cli.py
src/enhancing/dataloader/: __init__.py  cc3m.py  classimage.py  coco.py  huggingface.py  imagenet.py  inatural.py  lsun.py  srimage.py  textimage.py
src/enhancing/losses/: layers.py  vqperceptual.py
src/enhancing/losses/op/: __init__.py  conv2d_gradfix.py  fused_act.py  fused_bias_act_kernel.cu  upfirdn2d.py  upfirdn2d_kernel.cu
src/enhancing/modules/cond/: __init__.py  clipcond.py  dummycond.py  vqcond.py
src/enhancing/modules/stage1/: layers.py  quantizers.py  vitvqgan.py
src/enhancing/modules/stage2/: layers.py  transformer.py
src/enhancing/utils/: callback.py  general.py  scheduler.py  tokenizer.py
