[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]
write_to = "src/enhancing/_version.py"

[tool.black]
line-length = 110
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 110
target-version = 'py38'
format = "grouped"
ignore-init-module-imports = true
select = ["E", "F", "I"]
ignore = ['F841', 'E501']

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["enhancing"]
known-first-party = ["enhancing"]
