[metadata]
name = enhancing-transformers
author = Andrew Powers-Holmes
author_email = aholmes@omnom.net
maintainer = Andrew Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.8
packages = find_namespace:
package_dir =
    =src
py_modules =
    enhancing

include_package_data = True
install_requires =
    albumentations >=1.3.1
    clip @ git+https://github.com/openai/CLIP.git
    einops >=0.6.1
    ftfy >=6.1.1
    kornia >=0.6.12
    lmdb >=1.4.1
    lpips >=0.1.4
    numpy >=1.24.1
    omegaconf >=2.3.0
    Pillow >=9.5.0
    pytorch-lightning >=2.0.0
    regex >=2023.6.3
    torch >=2.0.0
    torchvision
    wandb >=0.15.4

[options.packages.find]
where = src

[options.package_data]
* =
    *.json
    *.md
    *.txt
    *.rst
    *.yaml

[options.extras_require]
dev =
    black >= 22.3.0
    build >= 0.10.0
    pre-commit >= 3.0.0
    ruff >= 0.0.264
    setuptools-scm >= 7.0.5
    types-tensorflow
    types-protobuf

[options.entry_points]
console_scripts =
    enhancing = enhancing.cli:main

[flake8]
max-line-length = 110
ignore =
    F841 # variable assigned but not used; tedious during dev
    F401 # as is "imported module unused"
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv
